# ConcursTatNeft

./: README.md  pyproject.toml  requirements.txt  template.env
concurs/: db.sqlite3  manage.py
concurs/concurs/: asgi.py  settings.py  urls.py  wsgi.py
concurs/events/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
concurs/events/migrations/: 0001_initial.py  0002_alter_historymodel_options_alter_eventmodel_history_and_more.py
concurs/static/styles/: button.css  card.css
concurs/templates/events/: about_event.html  all_events.html  all_histories.html
concurs/templates/includes/: base.html
